cli: Split out triggers, add basic subcommand system
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -10,6 +10,7 @@ usysconf_sources = [
     'state.c',
     'util.c',
     'cli/main.c',
+    'cli/triggers.c',
 ]
 
 # Push all known handlers into the build
