cli: Add version subcommand - the most important thing eva ™
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,6 +11,7 @@ usysconf_sources = [
     'util.c',
     'cli/main.c',
     'cli/triggers.c',
+    'cli/version.c',
 ]
 
 # Push all known handlers into the build
