src: Split the core out into a library routine
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -4,19 +4,17 @@ handlers = [
     'ldconfig',
 ]
 
-usysconf_sources = [
+
+libusysconf_sources = [
     'context.c',
     'files.c',
     'state.c',
     'util.c',
-    'cli/main.c',
-    'cli/triggers.c',
-    'cli/version.c',
 ]
 
 # Push all known handlers into the build
 foreach handler : handlers
-    usysconf_sources += 'handlers/@0@.c'.format(handler)
+    libusysconf_sources += 'handlers/@0@.c'.format(handler)
 endforeach
 
 usysconf_link_args = []
@@ -24,6 +22,33 @@ usysconf_link_args = []
 if with_static_binary == true
     usysconf_link_args += '-static'
 endif
+
+usysconf_sources = [
+    'cli/main.c',
+    'cli/triggers.c',
+    'cli/version.c',
+]
+
+libusysconf_includes = [
+    config_h_dir,
+    include_directories('.'),
+]
+
+libusysconf = static_library(
+    'usysconf',
+    sources: libusysconf_sources,
+    install: false,
+    c_args: [
+        '-fvisibility=default',
+    ],
+    include_directories: libusysconf_includes,
+)
+
+link_libusysconf = declare_dependency(
+    link_with: libusysconf,
+    include_directories: libusysconf_includes,
+)
+
 
 # Build main qol-assist binary
 usysconf = executable(
@@ -35,8 +60,7 @@ usysconf = executable(
     c_args: [
         '-fvisibility=default',
     ],
-    include_directories: [
-        config_h_dir,
-        include_directories('.'),
+    dependencies: [
+        link_libusysconf,
     ],
 )
