handlers: Implement `update-mime-database` trigger
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -3,6 +3,7 @@ handlers = [
     'clr-boot-manager',
     'depmod',
     'linux-driver-management',
+    'mime',
     'glib2',
     'icon-cache',
     'fonts',
