handlers: Add new hwdb handler
This generates the hwdb cache via systemd whenever the relevant directories
have been updated.

Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,6 +2,7 @@ handlers = [
     'ldconfig',
     'clr-boot-manager',
     'depmod',
+    'hwdb',
     'linux-driver-management',
     'mime',
     'glib2',
