handlers: Implement support for systemd-sysusers
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -4,6 +4,7 @@ handlers = [
     'depmod',
     'hwdb',
     'linux-driver-management',
+    'sysusers',
     'mime',
     'glib2',
     'icon-cache',
