handlers: Implement systemd-sysusers support
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -5,6 +5,7 @@ handlers = [
     'hwdb',
     'linux-driver-management',
     'sysusers',
+    'tmpfiles',
     'mime',
     'glib2',
     'icon-cache',
