Force static libraries for when we vendor libuf
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/meson.build
+++ b/meson.build
@@ -10,6 +10,7 @@ project(
         'prefix=/usr',
         'sysconfdir=/etc',
         'localstatedir=/var',
+        'default-library=static',
     ],
 )
 
