Vendor libuf as a meson subproject to help us get stuff done ™
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/meson.build
+++ b/meson.build
@@ -62,6 +62,15 @@ config_h = configure_file(
 )
 config_h_dir = include_directories('.')
 
+# Get libuf built to provide convenience functions
+libuf = subproject('libuf',
+    default_options: [
+        'default-library=static',
+        'c_std=c11',
+        'with-tests=false',
+    ]
+)
+
 # Now go build the source
 subdir('src')
 
