--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,1 +1,5 @@
 option('with-static-binary', type: 'boolean', value: 'false', description: 'Build a static binary')
+
+# Control what modules usysconf knows about
+option('with-linux-driver-management', type: 'boolean', value: 'true', description: 'Enable linux-driver-management support')
+option('with-clr-boot-manager', type: 'boolean', value: 'true', description: 'Enable clr-boot-manager support')
