Start namespacing handlers
Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -27,8 +27,8 @@ endif
 # We'll still enable hwdb but alter for udev path if not using systemd
 if with_systemd == true
     handlers += [
-        'tmpfiles',
-        'sysusers',
+        'systemd/tmpfiles',
+        'systemd/sysusers',
     ]
 endif
 
