--- a/meson_options.txt
+++ b/meson_options.txt
@@ -5,3 +5,7 @@ option('with-linux-driver-management', type: 'boolean', value: 'true', descripti
 option('with-clr-boot-manager', type: 'boolean', value: 'true', description: 'Enable clr-boot-manager support')
 option('with-systemd', type: 'boolean', value: 'true', description: 'Enable systemd support')
 
+# Used for boot management bits (like depmod)
+option('with-kernel-modules-dir', type: 'string', value: '/lib/modules', description: 'Path to the kernel module base tree')
+# clr-boot-manager specific currently
+option('with-kernel-dir', type: 'string', value: '/usr/lib/kernel', description: 'Path to the vendor kernel tree')
