Add new systemd reexec handler
If the main systemd binary is observed to have changed on disk,
ask that systemd reexec itself.

Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -33,6 +33,7 @@ if with_systemd == true
     handlers += [
         'systemd/tmpfiles',
         'systemd/sysusers',
+        'systemd/reexec',
         'systemd/reload',
     ]
 endif
