handlers: Add support for qol-assist
Any time we see an update for qol-assist we'll ask it to trigger
an update for the next boot, which will perform a versioned migration
for any outstanding tasks.

Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/meson.build
+++ b/meson.build
@@ -62,6 +62,10 @@ with_ldm = get_option('with-linux-driver-management')
 if with_ldm == true
     cdata.set('HAVE_LDM', '1')
 endif
+with_qol = get_option('with-qol-assist')
+if with_qol == true
+    cdata.set('HAVE_QOL_ASSIST', '1')
+endif
 
 # Work out systemd support
 with_systemd = get_option('with-systemd')
@@ -126,6 +130,7 @@ report = [
     '',
     '    clr-boot-manager:                       @0@'.format(with_cbm),
     '    linux-driver-management:                @0@'.format(with_ldm),
+    '    qol-assist:                             @0@'.format(with_qol),
     '    systemd support:                        @0@'.format(with_systemd),
     '',
     '    Kernel configuration:',
