Redirect all errors to temporary log file
This temporary log file is then pumped back to the real stderr after
the process exits, if there was a deemed error.

Signed-off-by: Ikey Doherty <ikey@solus-project.com>

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -11,3 +11,5 @@ option('with-systemd', type: 'boolean', value: 'true', description: 'Enable syst
 option('with-kernel-modules-dir', type: 'string', value: '/lib/modules', description: 'Path to the kernel module base tree')
 # clr-boot-manager specific currently
 option('with-kernel-dir', type: 'string', value: '/usr/lib/kernel', description: 'Path to the vendor kernel tree')
+
+option('with-log-dir', type: 'string', value: '/var/log', description: 'Logging directory for usysconf')
