--- a/meson_options.txt
+++ b/meson_options.txt
@@ -17,3 +17,5 @@ option('with-log-dir', type: 'string', value: '/var/log', description: 'Logging 
 
 # This is useful for virtualbox upgrades
 option('with-vbox-restart', type: 'boolean', value: 'false', description: 'Automatically restart vboxdrv service on update')
+
+option('with-apparmor', type: 'boolean', value: 'true', description: 'Enable AppArmor integration via aa-lsm-hook')
